adding is internal document check to action further evidence under flag